fudanbot_ws/log/build_2024-12-12_11-53-23/modbus_driver/stdout_stderr.log
running egg_info
writing ../../build/modbus_driver/modbus_driver.egg-info/PKG-INFO
writing dependency_links to ../../build/modbus_driver/modbus_driver.egg-info/dependency_links.txt
writing entry points to ../../build/modbus_driver/modbus_driver.egg-info/entry_points.txt
writing requirements to ../../build/modbus_driver/modbus_driver.egg-info/requires.txt
writing top-level names to ../../build/modbus_driver/modbus_driver.egg-info/top_level.txt
reading manifest file '../../build/modbus_driver/modbus_driver.egg-info/SOURCES.txt'
writing manifest file '../../build/modbus_driver/modbus_driver.egg-info/SOURCES.txt'
running build
running build_py
copying modbus_driver/RS485_node.py -> /home/desu/fudanbot_ws/build/modbus_driver/build/lib/modbus_driver
running install
running install_lib
copying /home/desu/fudanbot_ws/build/modbus_driver/build/lib/modbus_driver/RS485_node.py -> /home/desu/fudanbot_ws/install/modbus_driver/lib/python3.10/site-packages/modbus_driver
byte-compiling /home/desu/fudanbot_ws/install/modbus_driver/lib/python3.10/site-packages/modbus_driver/RS485_node.py to RS485_node.cpython-310.pyc
  File "/home/desu/fudanbot_ws/install/modbus_driver/lib/python3.10/site-packages/modbus_driver/RS485_node.py", line 25
    def encInnit(self, instrument)
                                  ^
SyntaxError: expected ':'

running install_data
running install_egg_info
removing '/home/desu/fudanbot_ws/install/modbus_driver/lib/python3.10/site-packages/modbus_driver-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/modbus_driver/modbus_driver.egg-info to /home/desu/fudanbot_ws/install/modbus_driver/lib/python3.10/site-packages/modbus_driver-0.0.0-py3.10.egg-info
running install_scripts
Installing RS485_node script to /home/desu/fudanbot_ws/install/modbus_driver/lib/modbus_driver
writing list of installed files to '/home/desu/fudanbot_ws/build/modbus_driver/install.log'
